# easy_profiler

./: .gitignore  CMakeLists.txt  qt_5.11.3_osx10.14_cmakeextras.tar.bz2  qt_5.11.3_osx_hunter.tar.bz2  qt_5.5.1-p9_c1a55303d_ubuntu16.04_cmakeextras.tar.bz2
cmake/: HunterGate.cmake  config.cmake
easy_profiler_converter/include/: json.hpp
easy_profiler_core/: CMakeLists.txt  base_block_descriptor.cpp  chunk_allocator.h  current_thread.h  easy_socket.cpp  event_trace_win.cpp  profile_manager.cpp  profile_manager.h  profiler.cpp  thread_storage.cpp
easy_profiler_core/include/easy/: easy_socket.h  profiler.h
easy_profiler_core/include/easy/details/: easy_compiler_support.h
profiler_gui/: CMakeLists.txt  blocks_graphics_view.cpp  blocks_tree_widget.cpp  common_functions.h  common_types.h  main.cpp  resources.qrc
